@@ -3,12 +3,12 @@ package de.tum.cit.aet.artemis.hyperion.service.codegeneration;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
-import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -25,7 +25,6 @@ import org.springframework.ai.retry.NonTransientAiException;
 import de.tum.cit.aet.artemis.core.domain.User;
 import de.tum.cit.aet.artemis.core.exception.NetworkingException;
 import de.tum.cit.aet.artemis.hyperion.dto.CodeGenerationResponseDTO;
-import de.tum.cit.aet.artemis.hyperion.dto.GeneratedFileDTO;
 import de.tum.cit.aet.artemis.hyperion.service.HyperionProgrammingExerciseContextRendererService;
 import de.tum.cit.aet.artemis.hyperion.service.HyperionPromptTemplateService;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExercise;
@@ -51,8 +50,6 @@ class HyperionTestRepositoryServiceTest {
     @Mock
     private HyperionProgrammingExerciseContextRendererService contextRenderer;
 
-    private ChatClient chatClient;
-
     private HyperionTestRepositoryService testRepository;
 
     private User user;
@@ -62,7 +59,7 @@ class HyperionTestRepositoryServiceTest {
     @BeforeEach
     void setup() {
         MockitoAnnotations.openMocks(this);
-        this.chatClient = ChatClient.create(chatModel);
+        ChatClient chatClient = ChatClient.create(chatModel);
         this.testRepository = new HyperionTestRepositoryService(programmingExerciseRepository, chatClient, templates, gitService, contextRenderer);
 
         this.user = new User();
@@ -81,14 +78,14 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"" + expectedPlan + "\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class))).thenReturn(renderedPrompt);
+        when(templates.renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap())).thenReturn(renderedPrompt);
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         CodeGenerationResponseDTO result = testRepository.generateSolutionPlan(user, exercise, "build logs", "repo structure");
 
         assertThat(result).isNotNull();
         assertThat(result.getSolutionPlan()).isEqualTo(expectedPlan);
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
@@ -97,12 +94,12 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, "logs", "structure");
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
@@ -110,12 +107,12 @@ class HyperionTestRepositoryServiceTest {
     void generateSolutionPlan_withFailedRepositoryCheckout_usesWarningMessage() throws Exception {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, "logs", "structure");
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
@@ -124,12 +121,12 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, "logs", "structure");
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
@@ -138,19 +135,19 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, "logs", "structure");
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
     @Test
     void generateSolutionPlan_withRepositoryAccessException_throwsNetworkingException() throws Exception {
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenThrow(new RuntimeException("Repository access failed"));
 
         assertThatThrownBy(() -> testRepository.generateSolutionPlan(user, exercise, "logs", "structure")).isInstanceOf(RuntimeException.class)
@@ -162,29 +159,28 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, "logs", "structure");
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
     @Test
     void defineFileStructure_withValidInput_returnsFileStructure() throws Exception {
-        List<GeneratedFileDTO> expectedFiles = List.of(new GeneratedFileDTO("SortTest.java", "class SortTest {}"));
         String jsonResponse = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"SortTest.java\",\"content\":\"class SortTest {}\"}]}";
 
-        when(templates.renderObject(eq("/prompts/hyperion/test/2_file_structure.st"), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(eq("/prompts/hyperion/test/2_file_structure.st"), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         CodeGenerationResponseDTO result = testRepository.defineFileStructure(user, exercise, "solution plan", "repo structure");
 
         assertThat(result).isNotNull();
         assertThat(result.getFiles()).hasSize(1);
-        assertThat(result.getFiles().get(0).path()).isEqualTo("SortTest.java");
-        assertThat(result.getFiles().get(0).content()).isEqualTo("class SortTest {}");
+        assertThat(result.getFiles().getFirst().path()).isEqualTo("SortTest.java");
+        assertThat(result.getFiles().getFirst().content()).isEqualTo("class SortTest {}");
     }
 
     @Test
@@ -192,14 +188,14 @@ class HyperionTestRepositoryServiceTest {
         String fileStructureJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"SortTest.java\",\"content\":\"stub\"}]}";
         String headersJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"SortTest.java\",\"content\":\"class SortTest { void testSort(); }\"}]}";
 
-        when(templates.renderObject(eq("/prompts/hyperion/test/2_file_structure.st"), any(Map.class))).thenReturn("rendered");
-        when(templates.renderObject(eq("/prompts/hyperion/test/3_headers.st"), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(eq("/prompts/hyperion/test/2_file_structure.st"), anyMap())).thenReturn("rendered");
+        when(templates.renderObject(eq("/prompts/hyperion/test/3_headers.st"), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(fileStructureJson)).thenReturn(createChatResponse(headersJson));
 
         CodeGenerationResponseDTO result = testRepository.generateClassAndMethodHeaders(user, exercise, "solution plan", "repo structure");
 
         assertThat(result).isNotNull();
-        assertThat(result.getFiles().get(0).content()).contains("void testSort()");
+        assertThat(result.getFiles().getFirst().content()).contains("void testSort()");
         verify(chatModel, org.mockito.Mockito.times(2)).call(any(Prompt.class));
     }
 
@@ -209,16 +205,16 @@ class HyperionTestRepositoryServiceTest {
         String headersJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"SortTest.java\",\"content\":\"class SortTest { void testSort(); }\"}]}";
         String coreLogicJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"SortTest.java\",\"content\":\"class SortTest { @Test void testSort() { /* test implementation */ } }\"}]}";
 
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(fileStructureJson)).thenReturn(createChatResponse(headersJson))
                 .thenReturn(createChatResponse(coreLogicJson));
 
         CodeGenerationResponseDTO result = testRepository.generateCoreLogic(user, exercise, "solution plan", "repo structure");
 
         assertThat(result).isNotNull();
-        assertThat(result.getFiles().get(0).content()).contains("test implementation");
+        assertThat(result.getFiles().getFirst().content()).contains("test implementation");
         verify(chatModel, org.mockito.Mockito.times(3)).call(any(Prompt.class));
-        verify(templates).renderObject(eq("/prompts/hyperion/test/4_logic.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/4_logic.st"), anyMap());
     }
 
     @Test
@@ -231,7 +227,7 @@ class HyperionTestRepositoryServiceTest {
     @Test
     void generateSolutionPlan_withNonTransientAiException_throwsNetworkingException() throws Exception {
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenThrow(new NonTransientAiException("AI service error"));
 
         assertThatThrownBy(() -> testRepository.generateSolutionPlan(user, exercise, "logs", "structure")).isInstanceOf(NetworkingException.class)
@@ -243,12 +239,12 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, null, "repo structure");
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
@@ -257,12 +253,12 @@ class HyperionTestRepositoryServiceTest {
         String jsonResponse = "{\"solutionPlan\":\"test plan\",\"files\":[]}";
 
         when(contextRenderer.getExistingSolutionCode(any(ProgrammingExercise.class), any(GitService.class))).thenReturn("public class Solution {}");
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         testRepository.generateSolutionPlan(user, exercise, "logs", null);
 
-        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/test/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
